winbind3: Fix pwent variable substitution

Commit 0ce46318 (winbind3: Simplify fillup_pw_field) broke variable
substitution by copying from the wrong (unsubstituted) buffer.  Fix it.

BUG: https://bugzilla.samba.org/show_bug.cgi?id=10852
Signed-off-by: Justin Maggard <jmaggard10@gmail.com>
Reviewed-by: Jeremy Allison <jra@samba.org>
Reviewed-by: Richard Sharpe <rsharpe@samba.org>
(cherry picked from commit 902086d0d4c688236ad4a8248a50de8639e1e524)

Autobuild-User(v4-2-test): Karolin Seeger <kseeger@samba.org>
Autobuild-Date(v4-2-test): Sun Oct 26 23:58:23 CET 2014 on sn-devel-104